; ModuleID = '/home/carl/AnghaBench/vlc/modules/demux/mpeg/extr_ts_psi.c_GetIso639AudioTypeDesc.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/demux/mpeg/extr_ts_psi.c_GetIso639AudioTypeDesc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GetIso639AudioTypeDesc.audio_type = internal global [3 x i8*] [i8* inttoptr (i64 129 to i8*), i8* inttoptr (i64 130 to i8*), i8* inttoptr (i64 128 to i8*)], align 16
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i64)* @GetIso639AudioTypeDesc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @GetIso639AudioTypeDesc(i64 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %4 = load i64, i64* %3, align 8
  %5 = icmp eq i64 %4, 0
  br i1 %5, label %10, label %6

6:                                                ; preds = %1
  %7 = load i64, i64* %3, align 8
  %8 = call i64 @ARRAY_SIZE(i8** getelementptr inbounds ([3 x i8*], [3 x i8*]* @GetIso639AudioTypeDesc.audio_type, i64 0, i64 0))
  %9 = icmp uge i64 %7, %8
  br i1 %9, label %10, label %11

10:                                               ; preds = %6, %1
  store i8* null, i8** %2, align 8
  br label %17

11:                                               ; preds = %6
  %12 = load i64, i64* %3, align 8
  %13 = add i64 %12, -1
  store i64 %13, i64* %3, align 8
  %14 = getelementptr inbounds [3 x i8*], [3 x i8*]* @GetIso639AudioTypeDesc.audio_type, i64 0, i64 %13
  %15 = load i8*, i8** %14, align 8
  %16 = call i8* @strdup(i8* %15)
  store i8* %16, i8** %2, align 8
  br label %17

17:                                               ; preds = %11, %10
  %18 = load i8*, i8** %2, align 8
  ret i8* %18
}

declare dso_local i64 @ARRAY_SIZE(i8**) #1

declare dso_local i8* @strdup(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
